# pre-commit-workshop

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  example.py  examplefile.sql  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
src/comma_test/: cli.py  comma_test.py
