[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "detect-extra-commas"
version = "0.1.0"
authors = [{name = "Andy Snell", email = "none.of@your.biz"},]
description = "Tests for the presence of unwanted trailing commas in SQL files."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",  # update later
    "Programming Language :: Python"
]
urls.Homepage = "https://example.com"
urls.Documentation = "https://example.com/docs"

dependencies = ["sqlparse"]
requires-python = ">=3.10"
optional-dependencies.dev = [
    "pre-commit",  # so you can run hooks on the codebase
    "pytest",  # remember to add tests for your hook
]

# TODO: update `your-script-name` and the path
scripts.detect-extra-commas = "src.comma_test.cli:main"

# optional (if you are making a package)
[tool.setuptools.packages.find]
where = ["src"]

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
    "SS06",
]
# remember to use single quotes for regex in TOML
exclude = [  # don't report on objects that match any of these regex
    '\.undocumented_method$',
    '\.__repr__$',
]
override_SS05 = [  # override SS05 to allow docstrings starting with these words
    '^Process ',
    '^Assess ',
    '^Access ',
]
